@@ -1,7 +1,17 @@
 0.4.1 (in development)
 ------------------------------------------------------------------------
 - Feature: [#17011] Option to show ride vehicles as separate entries when selecting a ride to construct.
+<<<<<<< HEAD
 - Improved: [#13966] Music Style dropdown is now sorted by name.
+=======
+- Fix: [#16934] Park size displayed incorrectly in Park window.
+- Fix: [#16974] Small scenery ghosts can be deleted.
+- Fix: [#17005] Unable to set patrol area for first staff member in park.
+- Fix: [#17073] Corrupt ride window and random crashes when trains have more than 144 cars.
+- Fix: [#17080] “Remove litter” cheat does not empty litter bins.
+- Fix: [#17099] Object selection thumbnail box is one pixel too tall.
+- Fix: [#17104] Changing map size does not invalidate park size.
+>>>>>>> parent of 8fe124b1d (Close #13966: Sort Music Style dropdown by name)
 - Improved: [#16978] Tree placement is more natural during map generation.
 - Improved: [#16992] The checkbox in the visibility column of the Tile Inspector has been replaced with an eye symbol.
 - Improved: [#16999] The maximum price for the park entry has been raised to £999.
